-Search for X11 in CMakeLists.txt and #define X11 if found. The client will link X11 on Unix systems if found. -Fixes console clipboard pasting for Unix.
git-svn-id: http://odamex.net/svn/root/trunk@4945 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,10 @@ macro(define_platform)
     add_definitions(-DSOLARIS -DUNIX -DBSD_COMP -gstabs+)
   elseif(UNIX)
     add_definitions(-DUNIX)
+    find_package(X11)
+    if(X11_FOUND)
+      add_definitions(-DX11)
+    endif()
   endif()
 endmacro(define_platform)
 
