-Apply hasufell's patch to add installation destination configurability to the CMake files (bug 1056).
git-svn-id: http://odamex.net/svn/root/trunk@5002 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 include(CMakeDependentOption)
+include(GNUInstallDirs)
 
 project(Odamex)
 cmake_minimum_required(VERSION 2.8)
@@ -117,10 +118,10 @@ if(NOT APPLE)
       set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
   else()
     install(FILES odamex.wad LICENSE README
-      DESTINATION share/odamex
+      DESTINATION ${CMAKE_INSTALL_DATADIR}/odamex
       COMPONENT common)
     install(FILES ${CONFIG_SAMPLES}
-      DESTINATION share/odamex/config-samples
+      DESTINATION ${CMAKE_INSTALL_DATADIR}/odamex/config-samples
       COMPONENT common)
 
     option(ODAMEX_COMPONENT_PACKAGES "Create several rpm/deb packages for repository maintainers." OFF)
