--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -120,56 +120,58 @@ add_definitions(-DUSE_PNG)
 # PortMidi configuration
 
 # PortMidi
-find_package(PortMidi)
-if(NOT PORTMIDI_FOUND)
-  # build the PortMidi library
-  set(PORTMIDI_LIBRARY "portmidi")
-  set(PORTMIDI_LIBRARIES ${PORTMIDI_LIBRARY})
-  set(PORTMIDI_DIR ../libraries/portmidi)
-  set(PORTMIDI_INCLUDE_DIR ${PORTMIDI_DIR}/pm_common/ ${PORTMIDI_DIR}/porttime/)  
+if(ENABLE_PORTMIDI)
+  find_package(PortMidi)
+  if(NOT PORTMIDI_FOUND)
+    # build the PortMidi library
+    set(PORTMIDI_LIBRARY "portmidi")
+    set(PORTMIDI_LIBRARIES ${PORTMIDI_LIBRARY})
+    set(PORTMIDI_DIR ../libraries/portmidi)
+    set(PORTMIDI_INCLUDE_DIR ${PORTMIDI_DIR}/pm_common/ ${PORTMIDI_DIR}/porttime/)  
 
-  if(APPLE)
-    set(CMAKE_OSX_SYSROOT /Developer/SDKs/MacOSX10.5.sdk CACHE PATH "-isysroot parameter for compiler" FORCE)
-    set(CMAKE_C_FLAGS "-mmacosx-version-min=10.5" CACHE STRING "needed in conjunction with CMAKE_OSX_SYSROOT" FORCE)
-    include_directories(${CMAKE_OSX_SYSROOT}/Developer/Headers/FlatCarbon)
-    set(FRAMEWORK_PATH ${CMAKE_OSX_SYSROOT}/System/Library/Frameworks)
-    set(COREAUDIO_LIB "${FRAMEWORK_PATH}/CoreAudio.framework")
-    set(COREFOUNDATION_LIB "${FRAMEWORK_PATH}/CoreFoundation.framework")
-    set(COREMIDI_LIB "${FRAMEWORK_PATH}/CoreMIDI.framework")
-    set(CORESERVICES_LIB "${FRAMEWORK_PATH}/CoreServices.framework")
+    if(APPLE)
+      set(CMAKE_OSX_SYSROOT /Developer/SDKs/MacOSX10.5.sdk CACHE PATH "-isysroot parameter for compiler" FORCE)
+      set(CMAKE_C_FLAGS "-mmacosx-version-min=10.5" CACHE STRING "needed in conjunction with CMAKE_OSX_SYSROOT" FORCE)
+      include_directories(${CMAKE_OSX_SYSROOT}/Developer/Headers/FlatCarbon)
+      set(FRAMEWORK_PATH ${CMAKE_OSX_SYSROOT}/System/Library/Frameworks)
+      set(COREAUDIO_LIB "${FRAMEWORK_PATH}/CoreAudio.framework")
+      set(COREFOUNDATION_LIB "${FRAMEWORK_PATH}/CoreFoundation.framework")
+      set(COREMIDI_LIB "${FRAMEWORK_PATH}/CoreMIDI.framework")
+      set(CORESERVICES_LIB "${FRAMEWORK_PATH}/CoreServices.framework")
 
-    set(PM_NEEDED_LIBS ${COREAUDIO_LIB} ${COREFOUNDATION_LIB} ${COREMIDI_LIB} ${CORESERVICES_LIB} CACHE INTERNAL "")
-    file(GLOB PORTMIDI_PLATFORM_HEADERS ${PORTMIDI_DIR}/pm_mac/*.h)
-    file(GLOB PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/pm_mac/*.c)
-    list(APPEND PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/porttime/ptmacosx_mach.c)
-  elseif(WIN32)
-    set(PM_NEEDED_LIBS winmm.lib)
-    file(GLOB PORTMIDI_PLATFORM_HEADERS ${PORTMIDI_DIR}/pm_win/*.h)
-    file(GLOB PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/pm_win/*.c)
-    list(APPEND PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/porttime/ptwinmm.c)
-  elseif(UNIX)
-    set(LINUX_FLAGS "-DPMALSA")
-    set(PM_NEEDED_LIBS pthread asound)
-    file(GLOB PORTMIDI_PLATFORM_HEADERS ${PORTMIDI_DIR}/pm_linux/*.h)
-    file(GLOB PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/pm_linux/*.c)
-    list(APPEND PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/porttime/ptlinux.c)
+      set(PM_NEEDED_LIBS ${COREAUDIO_LIB} ${COREFOUNDATION_LIB} ${COREMIDI_LIB} ${CORESERVICES_LIB} CACHE INTERNAL "")
+      file(GLOB PORTMIDI_PLATFORM_HEADERS ${PORTMIDI_DIR}/pm_mac/*.h)
+      file(GLOB PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/pm_mac/*.c)
+      list(APPEND PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/porttime/ptmacosx_mach.c)
+    elseif(WIN32)
+      set(PM_NEEDED_LIBS winmm.lib)
+      file(GLOB PORTMIDI_PLATFORM_HEADERS ${PORTMIDI_DIR}/pm_win/*.h)
+      file(GLOB PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/pm_win/*.c)
+      list(APPEND PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/porttime/ptwinmm.c)
+    elseif(UNIX)
+      set(LINUX_FLAGS "-DPMALSA")
+      set(PM_NEEDED_LIBS pthread asound)
+      file(GLOB PORTMIDI_PLATFORM_HEADERS ${PORTMIDI_DIR}/pm_linux/*.h)
+      file(GLOB PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/pm_linux/*.c)
+      list(APPEND PORTMIDI_PLATFORM_SOURCES ${PORTMIDI_DIR}/porttime/ptlinux.c)
+    endif()
+
+    file(GLOB PORTMIDI_HEADERS ${PORTMIDI_DIR}/pm_common/*.h)
+    list(APPEND PORTMIDI_HEADERS ${PORTMIDI_DIR}/porttime/porttime.h)
+    list(APPEND PORTMIDI_HEADERS ${PORTMIDI_PLATFORM_HEADERS})
+
+    file(GLOB PORTMIDI_SOURCES ${PORTMIDI_DIR}/pm_common/*.c)
+    list(APPEND PORTMIDI_SOURCES ${PORTMIDI_DIR}/porttime/porttime.c)
+    list(APPEND PORTMIDI_SOURCES ${PORTMIDI_PLATFORM_SOURCES})
+
+    add_library(${PORTMIDI_LIBRARY} STATIC ${PORTMIDI_SOURCES} ${PORTMIDI_HEADERS})
+    target_link_libraries(${PORTMIDI_LIBRARY} ${PM_NEEDED_LIBS})
+    message(STATUS "portmidi will be built and staticaly linked when compiling the client application.")
   endif()
 
-  file(GLOB PORTMIDI_HEADERS ${PORTMIDI_DIR}/pm_common/*.h)
-  list(APPEND PORTMIDI_HEADERS ${PORTMIDI_DIR}/porttime/porttime.h)
-  list(APPEND PORTMIDI_HEADERS ${PORTMIDI_PLATFORM_HEADERS})
-
-  file(GLOB PORTMIDI_SOURCES ${PORTMIDI_DIR}/pm_common/*.c)
-  list(APPEND PORTMIDI_SOURCES ${PORTMIDI_DIR}/porttime/porttime.c)
-  list(APPEND PORTMIDI_SOURCES ${PORTMIDI_PLATFORM_SOURCES})
-
-  add_library(${PORTMIDI_LIBRARY} STATIC ${PORTMIDI_SOURCES} ${PORTMIDI_HEADERS})
-  target_link_libraries(${PORTMIDI_LIBRARY} ${PM_NEEDED_LIBS})
-  message(STATUS "portmidi will be built and staticaly linked when compiling the client application.")
+  add_definitions(-DPORTMIDI)
+  include_directories(${PORTMIDI_INCLUDE_DIR})
 endif()
-
-add_definitions(-DPORTMIDI)
-include_directories(${PORTMIDI_INCLUDE_DIR})
 
 # Find Mac frameworks
 if(APPLE)
@@ -198,7 +200,9 @@ if(SDL_FOUND AND SDLMIXER_FOUND)
   target_link_libraries(odamex ${ZLIB_LIBRARY})
   target_link_libraries(odamex ${PNG_LIBRARY} ${ZLIB_LIBRARY})
 
-  target_link_libraries(odamex ${PORTMIDI_LIBRARY})
+  if(ENABLE_PORTMIDI)
+    target_link_libraries(odamex ${PORTMIDI_LIBRARY})
+  endif()
 
   if(WIN32)
     target_link_libraries(odamex winmm wsock32 Shlwapi)
