-Set default values for CMAKE_INSTALL_BINDIR and CMAKE_INSTALL_DATADIR if the GNUInstallDirs CMake module is not found (update to r5002).
git-svn-id: http://odamex.net/svn/root/trunk@5004 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 include(CMakeDependentOption)
-include(GNUInstallDirs)
+
+if(EXISTS "GNUInstallDirs.cmake")
+  include(GNUInstallDirs)
+else()
+  set(CMAKE_INSTALL_BINDIR "bin")
+  set(CMAKE_INSTALL_DATADIR "share")
+endif()
 
 # options
 option(BUILD_CLIENT "Build client target" 1)
