-r5004 didn't work so well. Let's try it again.
git-svn-id: http://odamex.net/svn/root/trunk@5005 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
 include(CMakeDependentOption)
 
-if(EXISTS "GNUInstallDirs.cmake")
-  include(GNUInstallDirs)
-else()
-  set(CMAKE_INSTALL_BINDIR "bin")
-  set(CMAKE_INSTALL_DATADIR "share")
-endif()
+# CMAKE_INSTALL_BINDIR and CMAKE_INSTALL_DATADIR will be changed if GNUInstallDirs is availible
+set(CMAKE_INSTALL_BINDIR "bin")
+set(CMAKE_INSTALL_DATADIR "share")
+include(GNUInstallDirs OPTIONAL)
 
 # options
 option(BUILD_CLIENT "Build client target" 1)
