--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,3 +1,8 @@
+# use unquoted #defines
+if(COMMAND cmake_policy)
+  cmake_policy(SET CMP0005 NEW)
+endif(COMMAND cmake_policy)
+
 # Client flags
 if(NOT MSVC)
 	if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
@@ -184,7 +189,7 @@ endif()
 
 # Set up FHS installation path
 if(NOT APPLE AND NOT WIN32)
-  add_definitions("-DINSTALL_PREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
+  add_definitions(-DINSTALL_PREFIX="${CMAKE_INSTALL_PREFIX}")
 endif()
 
 # Client target
