-Set the default wad path and default binary path for OdaLaunch based on the installation directory (bug 1059).
git-svn-id: http://odamex.net/svn/root/trunk@5007 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(CMAKE_INSTALL_BINDIR "bin")
 set(CMAKE_INSTALL_DATADIR "share")
 include(GNUInstallDirs OPTIONAL)
 
+add_definitions(-DINSTALL_BINDIR="${CMAKE_INSTALL_BINDIR}")
 add_definitions(-DINSTALL_DATADIR="${CMAKE_INSTALL_DATADIR}")
 
 # options
