-Make free zone blocks identifiable by their tag being set to PU_FREE rather than the block's user pointer being set to NULL. Both schemes were used concurrently due to code from ZDoom 1.22 and Chocolate Doom. -Change the PU_FREE value from 5 to 0 as a free block's tag was sometimes set to 0 even though other functions tested for free blocks with PU_FREE (5). -Add a #define for ODAMEX_DEBUG and verify the zone heap at every allocation and deallocation if it's enabled.
git-svn-id: http://odamex.net/svn/root/trunk@5021 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,6 @@ if(COMMAND cmake_policy)
   cmake_policy(SET CMP0005 NEW)
 endif(COMMAND cmake_policy)
 
-if(COMMAND cmake_policy)
-  cmake_policy(SET CMP0005 NEW)
-endif(COMMAND cmake_policy)
-
 include(CMakeDependentOption)
 
 # CMAKE_INSTALL_BINDIR and CMAKE_INSTALL_DATADIR will be changed if GNUInstallDirs is availible
@@ -60,10 +56,13 @@ macro(global_compile_options)
     if(USE_SANITIZE_ADDRESS)
       set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -O1 -fno-omit-frame-pointer -fno-optimize-sibling-calls")
     endif()
+    if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+      add_definitions(-DODAMEX_DEBUG)
+	endif()
   endif()
 endmacro(global_compile_options)
 
-if( ${CMAKE_SYSTEM_NAME} MATCHES SunOS )
+if(${CMAKE_SYSTEM_NAME} MATCHES SunOS )
   set(SOLARIS 1)
 endif()
 
@@ -148,8 +147,8 @@ if(NOT APPLE)
       DESTINATION config-samples
       COMPONENT common)
 
-      # Windows ZIP packages are "tarbombs" by default.
-      set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
+    # Windows ZIP packages are "tarbombs" by default.
+    set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
   else()
     install(FILES odamex.wad LICENSE README
       DESTINATION ${CMAKE_INSTALL_DATADIR}/odamex
