-Add basic target CPU architecture detection to the CMake project files. It relies on CMAKE_SYSTEM_PROCESSOR being set correctly for the target architecture if cross-compiling. -Only use the -march=native GCC flag on x86 platforms for now since it is not availible on ARM platforms.
git-svn-id: http://odamex.net/svn/root/trunk@5025 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,15 +5,19 @@ endif(COMMAND cmake_policy)
 
 # Client flags
 if(NOT MSVC)
-	if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-		if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
-			set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
-		else(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
-			if(APPLE)
-				set(CMAKE_CXX_FLAGS_RELEASE "-faltivec")
-			endif()
-		endif()
-	endif()
+  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
+      if(target_arch STREQUAL "i386" OR target_arch STREQUAL "amd64")        
+        set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
+      else()
+        set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+      endif()
+    else(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
+      if(APPLE)
+        set(CMAKE_CXX_FLAGS_RELEASE "-O3 -faltivec")
+      endif()
+    endif()
+  endif()
 else()
   set(CMAKE_CXX_FLAGS_RELEASE "/Ox /Oi /arch:SSE2") 
 endif()
